// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Swiper interface testing closeLeftMenu(setStateCallBack) 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    _open={true}
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing closeLeftMenu(setStateCallBack) 2`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing closeRightMenu(setStateCallBack) 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    _open={true}
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing closeRightMenu(setStateCallBack) 2`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing isLeftMenuOpen() 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    _open={true}
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing isRightMenuOpen() 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    _open={true}
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing openMenuLeft(setStateCallBack) 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing openMenuLeft(setStateCallBack) 2`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    _open={true}
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing openRightMenu(setStateCallBack) 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing openRightMenu(setStateCallBack) 2`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    _open={true}
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing toggleLeftMenu(setStateCallBack) 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing toggleLeftMenu(setStateCallBack) 2`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    _open={true}
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing toggleLeftMenu(setStateCallBack) 3`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing toggleRightMenu(setStateCallBack) 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing toggleRightMenu(setStateCallBack) 2`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    _open={true}
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper interface testing toggleRightMenu(setStateCallBack) 3`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID01"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
    }
  }
  title={null}
>
  <swiper-menu
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID03"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-menu
    id="uuID04"
    key="uuID04"
    pullRight={true}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <P
      id="uuID05"
    >
      Content
    </P>
  </swiper-menu>
  <swiper-body
    className="center"
    id="uuID06"
    key="uuID06"
  >
    <Paragraph
      id="uuID07"
    />
  </swiper-body>
</div>
`;
